[package]
name = "walter-redditlang"
version = "0.1.8"
edition = "2021"
description = "Build tool for https://github.com/elijah629/redditlang"
repository = "https://github.com/elijah629/redditlang"
license = "MIT"

[dependencies]
cc = "1.0.79"
clap = { version = "4.3.10", features = ["derive"] }
colored = "2.0.4"
dirs = "5.0.1"
enquote = "1.1.0"
git2 = "0.17.2"
inkwell = { version = "0.2.0", features = ["llvm15-0"] }
llvm-sys = "150.0.7"
log = "0.4.19"
pest = "2.6.1"
pest_derive = "2.6.1"
serde = { version = "1.0.166", features = ["derive"] }
serde_yaml = "0.9.22"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "walter"
path = "src/main.rs"