[package]
name = "walter-redditlang"
version = "0.2.0"
edition = "2021"
description = "Build tool for https://github.com/elijah629/redditlang"
repository = "https://github.com/elijah629/redditlang"
license = "MIT"

[dependencies]
# cli
clap = { version = "4.3.10", features = ["derive"] }

# compiling
inkwell = { version = "0.2.0", features = ["llvm15-0"] }
cc = "1.0.79"

# logging
log = "0.4.19"
colored = "2.0.4"

# lexing/parsing
pest = "2.6.1"
pest_derive = "2.6.1"
enquote = "1.1.0"

# walter.yml version
semver = { version = "1.0.17", features = ["serde"] }

# walter.yml serialization
serde = { version = "1.0.166", features = ["derive"] }
serde_yaml = "0.9.22"

# walter.yml placement
dirs = "5.0.1"

# other
git2 = "0.17.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "walter"
path = "src/main.rs"
